--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -16,9 +16,29 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+    <script src="js/index.js" type="text/javascript"></script>
 </head>
 <body>
-<h1>Hello, world!</h1>
+<form class="add-form" action="mappoints/addpoint" style="width:40%;">
+    <h2 class="form-signin-heading">Добавить точку</h2>
+    <br/>
+    <label for="inputName" class="sr-only">введите название точки</label>
+    <input type="text" id="inputName" class="form-control" placeholder="введите название точки" required autofocus>
+    <label for="inputAddress" class="sr-only">введите адрес точки</label>
+    <input type="text" id="inputAddress" class="form-control" placeholder="введите адрес точки" required>
+    <br/>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Добавить</button>
+</form>
+
+<hr>
+
+<h2 class="form-signin-heading">Последние добавленные точки</h2>
+
+<hr>
+
+<h2 class="form-signin-heading">Точки на карте</h2>
+<div id="ymap" style="width:100%;height:600px;"></div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
