--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -10,6 +10,10 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -20,13 +24,13 @@
     <script src="js/index.js" type="text/javascript"></script>
 </head>
 <body>
-<form class="add-form" action="mappoints/addpoint" style="width:40%;">
+<form id="add-form" action='mappoints/addpoint' method='post' style="width:40%;">
     <h2 class="form-signin-heading">Добавить точку</h2>
     <br/>
     <label for="inputName" class="sr-only">введите название точки</label>
-    <input type="text" id="inputName" class="form-control" placeholder="введите название точки" required autofocus>
+    <input type="text" id="inputName" name="name" class="form-control" placeholder="введите название точки" required autofocus>
     <label for="inputAddress" class="sr-only">введите адрес точки</label>
-    <input type="text" id="inputAddress" class="form-control" placeholder="введите адрес точки" required>
+    <input type="text" id="inputAddress" name="address" class="form-control" placeholder="введите адрес точки" required>
     <br/>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Добавить</button>
 </form>
@@ -40,9 +44,5 @@
 <h2 class="form-signin-heading">Точки на карте</h2>
 <div id="ymap" style="width:100%;height:600px;"></div>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
